# ai-snake

./: .gitignore  README.md  agent.py  ai.py  bait_generator.py  config.json  dls.py  gs.py  main.py  mapfile.txt  requirements.txt  stat.py  ui.py  world.py
ai/: __init__.py  gs.py
ai/cpp/: CMakeLists.txt  __init__.py  alphabeta.hpp  build.sh  clear.sh  cppagent.cpp
cpp/: CMakeLists.txt  alphabeta.hpp  cppagent.cpp
demos/: run_all.sh
demos/1/: config.json  mapfile.txt
demos/3/: config.json  mapfile.txt
demos/4/: config.json  mapfile.txt
demos/5/: config.json  mapfile.txt
resutls/: dls  gs  rand_results
